policies/tests/verify-image-signatures/resource-fail.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: unsigned-image-pod
  namespace: tenant-alpha
spec:
  containers:
    - name: app
      image: "harbor.sre.internal/alpha/unsigned-app:v2.0.0"
